--- a/SCME.Service/Properties/Settings.settings
+++ b/SCME.Service/Properties/Settings.settings
@@ -176,7 +176,7 @@
     <Setting Name="TOUNode" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">11</Value>
     </Setting>
-    <Setting Name="IsWriteSafetyRegister" Type="System.Boolean" Scope="User">
+    <Setting Name="IsWriteSafetyRegister" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
